k8s/deploymets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-homework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ma-homework
  template:
    metadata:
      labels:
        app: ma-homework
    spec:
      containers:
      - name: ma-homework
        image: nickfeld/ma_homework:0.1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: web
          containerPort: 8000
