k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ma-homework
spec:
  selector:
    app: ma-homework
  ports:
  - protocol: TCP
    port: 9000
    targetPort: web
  type: NodePort
